--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "vscode-custom-loader",
   "workspaces": [
     "extension",
-    "hook"
+    "hook",
+    "vscode-background-image"
   ],
   "description": "VSCode Custom Loader Project",
   "author": "nidefawl",
@@ -16,12 +17,14 @@
   
   "scripts": {
     "lint": "eslint .",
-    "dist": "cd extension && vsce package --pre-release --no-git-tag-version --yarn --no-dependencies -o ../dist 0.0.3"
+    "dist-custom-loader": "cd extension && vsce package --pre-release --no-git-tag-version --yarn --no-dependencies -o ../dist",
+    "dist-background-image": "cd vscode-background-image && vsce package --pre-release --no-git-tag-version --yarn --no-dependencies -o ../dist",
+    "dist": "yarn dist-custom-loader && yarn dist-background-image"
   },
   "devDependencies": {
     "@types/node": "14.x",
     "@types/vscode": "^1.63.1",
     "eslint": "^8.7.0",
-    "typescript": "^4.5.5"
+    "vsce": "^2.6.4"
   }
 }
