--- a/extension/hook/package.json
+++ b/extension/hook/package.json
@@ -5,5 +5,9 @@
   "license": "MIT",
   "version": "0.0.3",
   "private": true,
-  "main": "hook.js"
+  "main": "hook.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nidefawl/vscode-custom-loader"
+  }
 }
