Fix extension not loading in remote workspaces

--- a/extension/package.json
+++ b/extension/package.json
@@ -18,7 +18,10 @@
   },
   "categories": [
     "Other",
-    "UI"
+    "Themes"
+  ],
+  "extensionKind": [
+    "ui"
   ],
   "activationEvents": [
     "*"
