--- a/extension/package.json
+++ b/extension/package.json
@@ -5,7 +5,7 @@
   "author": "nidefawl",
   "publisher": "nidefawl",
   "license": "MIT",
-  "version": "0.0.7",
+  "version": "0.1.2",
   "private": true,
   "repository": {
     "type": "git",
@@ -44,5 +44,8 @@
         "category": "VSCode Custom Loader"
       }
     ]
+  },
+  "dependencies": {
+    "sudo-prompt": "9.2.1"
   }
 }
